--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1 style="text-align: center;">hello welcome to this amazing webite</h1>
 <p style="text-align: center;">this website is for my amazing server play.gamer234emp.ga</p>
-<script src="198.168.1.254:25565"></script>
+<p style="text-align: center;">this server is online most of the time mon-sun</p>
