--- a/smp.html
+++ b/smp.html
@@ -1,1 +1,1 @@
-<script>window.location.replace('86.181.48.240:25562')</script>
+<script>window.location.replace('http://86.181.48.240:25562')</script>
